# repo-infra

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  repos.bzl
hack/: BUILD.bazel  tools.go  update-bazel.sh  update-deps.sh  verify-bazel.sh  verify-deps.sh
verify/: update-bazel.sh  verify-bazel.sh
