package(default_visibility = ["//visibility:public"])

_GAZELLE = "@bazel_gazelle//cmd/gazelle"

_KAZEL = "//cmd/kazel"

_GO = "@go_sdk//:bin/go"

sh_binary(
    name = "update-deps",
    srcs = ["update-deps.sh"],
    args = [
        "$(location %s)" % _GO,
        "$(location %s)" % _GAZELLE,
        "$(location %s)" % _KAZEL,
        "$(location :update-bazel)",
    ],
    data = [
        _GAZELLE,
        _GO,
        _KAZEL,
        ":update-bazel",
    ],
)

sh_test(
    name = "verify-deps",
    srcs = ["verify-deps.sh"],
    args = [
        "$(location :update-deps)",
        "$(location %s)" % _GO,
        "$(location %s)" % _GAZELLE,
        "$(location %s)" % _KAZEL,
        "$(location :update-bazel)",
    ],
    data = [
        _GAZELLE,
        _GO,
        _KAZEL,
        ":update-bazel",
        ":update-deps",
        "@//:all-srcs",
    ],
    tags = ["lint"],
)

sh_binary(
    name = "update-bazel",
    srcs = ["update-bazel.sh"],
    args = [
        "$(location %s)" % _GAZELLE,
        "$(location %s)" % _KAZEL,
    ],
    data = [
        _GAZELLE,
        _KAZEL,
    ],
)

sh_test(
    name = "verify-bazel",
    srcs = ["verify-bazel.sh"],
    args = [
        "$(location %s)" % _GAZELLE,
        "$(location %s)" % _KAZEL,
    ],
    data = [
        "@//:all-srcs",
        _GAZELLE,
        _KAZEL,
    ],
    tags = ["lint"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
